--- a/login.html
+++ b/login.html
@@ -5,12 +5,51 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" charset="utf-8"/>
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css">
 </head>
+<style type="text/css">
+    body{
+        padding-top:40px;
+        padding-bottom: 40px;
+        background-color:#f5f5f5;
+    }
+
+    .form-signin{
+        max-width: 300px;
+        padding: 19px 29px 29px;
+        margin:0 auto 20px;
+        background-color: #fff;
+        border:1px solid #e5e5e5;
+        -webkit-border-radius:5px;
+        -moz-border-radius:5px;
+        border-radius:5px;
+        -webkit-box-shadow:0 1px 2px rgba(0,0,0,.05);
+        -moz-box-shadow:0 1px 2px rgba(0,0,0,.05);
+        box-shadow:0 1px 2px rgba(0,0,0,.05);
+    }
+
+    .form-signin .form-signin-heading,
+    .form-signin .checkbox{
+        margin-bottom: 10px;
+    }
+
+    .form-signin input[type="text"]
+    .form-signin input[type="password"]{
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 15px;
+        padding: 7px 9px;
+    }
+
+    /* 修改按钮宽度 */
+    .form-signin button {
+        width: 100%;
+    }
+</style>
 <body>
 
-    <div>
-        <form>
+    <div class="container">
+        <form class="form-signin">
             <h2 class="form-signin-heading">请登陆</h2>
-            <input type="text" class="input-block-level" placeholder="Email address"/>
+            <input type="text" class="input-block-level" placeholder="用户名/邮箱"/>
             <input type="password" class="input-block-level" placeholder="密码"/>
             <label class="checkbox">
                 <input type="checkbox" value="remember-me"/>记住我
@@ -19,7 +58,10 @@
         </form>
 
     </div>
+
+    <!-- 加载js文件 
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    
+-->
 </body>
 </html>
